Correct comment compose spacing

--- a/src/components/commenting-status/commenting-status.scss
+++ b/src/components/commenting-status/commenting-status.scss
@@ -4,7 +4,7 @@
     border: 1px solid $ui-blue-10percent;
     border-radius: 8px;
     padding: 1.75rem 3rem 2rem;
-    margin: .5rem 0 2.25rem;
+    margin: .5rem 0 2rem;
     background-color: $ui-blue-10percent;
     text-align: center;
     box-sizing: border-box;
